Fix pgAdmin email format

--- a/.env.example
+++ b/.env.example
@@ -70,7 +70,7 @@ AI_REQUESTS_PER_USER_PER_DAY="50"
 # DEVELOPMENT TOOLS
 # ===================================
 # pgAdmin credentials
-PGADMIN_EMAIL="admin@musiccollab.local"
+PGADMIN_EMAIL="admin@example.com"
 PGADMIN_PASSWORD="admin_password"
 
 # Redis Commander credentials
