--- a/.env.example
+++ b/.env.example
@@ -69,7 +69,7 @@ AI_REQUESTS_PER_USER_PER_DAY="50"
 # ===================================
 # DEVELOPMENT TOOLS
 # ===================================
-# pgAdmin credentials
+# pgAdmin credentials (auto-configured with database connection)
 PGADMIN_EMAIL="admin@example.com"
 PGADMIN_PASSWORD="admin_password"
 
