--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/markdown-it": "^14.1.2",
+    "gray-matter": "^4.0.3",
+    "markdown-it": "^14.1.0",
     "pinia": "^3.0.1",
+    "shiki": "^3.6.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
