--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,7 @@ jobs:
 
   e2e-test:
     runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test]
+    needs: [backend-test, frontend-test, build]
     
     services:
       postgres:
@@ -215,3 +215,91 @@ jobs:
           backend/dist/
           frontend/dist/
         retention-days: 7
+
+  code-quality:
+    runs-on: ubuntu-latest
+    needs: [backend-test, frontend-test]
+    
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: music_collab_test
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+      
+      redis:
+        image: redis:7-alpine
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
+    
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Needed for SonarCloud
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: |
+          backend/package-lock.json
+          frontend/package-lock.json
+    
+    - name: Install dependencies
+      run: |
+        cd backend && npm ci
+        cd ../frontend && npm ci
+    
+    - name: Run backend coverage tests
+      run: |
+        cd backend
+        npm run test:coverage
+      env:
+        NODE_ENV: test
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/music_collab_test
+        REDIS_URL: redis://localhost:6379
+    
+    - name: Run frontend coverage tests
+      run: |
+        cd frontend
+        npm run test:unit -- --coverage --run
+    
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        args: >
+          -Dsonar.projectKey=music-collab-platform
+          -Dsonar.organization=your-org
+          -Dsonar.sources=backend/src,frontend/src
+          -Dsonar.tests=backend/src,frontend/src
+          -Dsonar.test.inclusions=**/*.test.ts,**/*.spec.ts
+          -Dsonar.javascript.lcov.reportPaths=backend/coverage/lcov.info,frontend/coverage/lcov.info
+          -Dsonar.coverage.exclusions=**/*.test.ts,**/*.spec.ts,**/coverage/**
+    
+    - name: Check for security vulnerabilities
+      run: |
+        cd backend && npm audit --audit-level high
+        cd ../frontend && npm audit --audit-level high
+    
+    - name: Check bundle size (frontend)
+      run: |
+        cd frontend
+        npm run build
+        # Check if bundle size is reasonable (under 1MB for main chunk)
+        find dist/assets -name "*.js" -exec ls -lh {} \; | awk '{if ($5 > "1M") exit 1}'
