--- a/.env.example
+++ b/.env.example
@@ -102,7 +102,7 @@ WEBSOCKET_CORS_ORIGIN="http://localhost:3000"
 # ===================================
 # FRONTEND CONFIGURATION
 # ===================================
-VITE_API_BASE_URL="http://localhost:3001/api"
+VITE_API_BASE_URL="http://localhost:3001/api/v1"
 VITE_WEBSOCKET_URL="http://localhost:3002"
 VITE_APP_NAME="Music Collaboration Platform"
 VITE_APP_VERSION="0.1.0"
