Full integration testing framework for the backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:unit": "jest --testPathIgnorePatterns=integration",
+    "test:integration": "npm run test:db:setup && jest --testPathPatterns=integration",
+    "test:db:setup": "DATABASE_URL=postgresql://dev_user:dev_password@localhost:5432/music_collab_test?schema=public npx prisma db push --force-reset",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
