--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,6 +13,10 @@ DB_PORT=5432
 DB_NAME=music_collab_dev
 DB_USERNAME=dev_user
 DB_PASSWORD=dev_password
+DATABASE_URL=postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public
+
+# Test Database Configuration (SQLite for fast testing)
+# DATABASE_URL=file:./test.db
 
 # Redis Configuration
 REDIS_HOST=localhost
@@ -22,6 +26,12 @@ REDIS_PASSWORD=dev_redis_password
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 JWT_EXPIRES_IN=7d
+
+# New JWT Configuration (for enhanced security)
+JWT_ACCESS_SECRET=your-super-secret-access-key-change-in-production
+JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-in-production
+JWT_ACCESS_EXPIRY=15m
+JWT_REFRESH_EXPIRY=7d
 
 # File Upload Configuration
 FILE_UPLOAD_MAX_SIZE=52428800
