--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,9 +110,67 @@ jobs:
         flags: frontend
         name: frontend-coverage
 
+  integration-test:
+    runs-on: ubuntu-latest
+    needs: [backend-test]
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: backend/package-lock.json
+    
+    - name: Install backend dependencies
+      run: |
+        cd backend
+        npm ci
+    
+    - name: Start Docker services for integration tests
+      run: |
+        cd dev-tools
+        docker compose up -d postgres redis
+    
+    - name: Wait for services to be ready
+      run: |
+        # Wait for PostgreSQL to be ready
+        echo "Waiting for PostgreSQL to be ready..."
+        timeout 60s bash -c 'until docker compose -f dev-tools/docker-compose.yml exec -T postgres pg_isready -U dev_user -d music_collab_dev; do sleep 2; done'
+        
+        # Wait for Redis to be ready
+        echo "Waiting for Redis to be ready..."
+        timeout 30s bash -c 'until docker compose -f dev-tools/docker-compose.yml exec -T redis redis-cli -a dev_redis_password ping | grep -q PONG; do sleep 2; done'
+        
+        echo "✅ Services are ready!"
+    
+    - name: Verify database setup
+      run: |
+        # Verify test database exists (created by init script)
+        docker compose -f dev-tools/docker-compose.yml exec -T postgres psql -U dev_user -d music_collab_test -c "SELECT 1;"
+        echo "✅ Test database is accessible"
+    
+    - name: Run integration tests
+      run: |
+        cd backend
+        npm run test:integration
+      env:
+        NODE_ENV: test
+        DATABASE_URL: postgresql://dev_user:dev_password@localhost:5432/music_collab_test
+        REDIS_URL: redis://localhost:6379
+        REDIS_PASSWORD: dev_redis_password
+    
+    - name: Stop Docker services
+      if: always()
+      run: |
+        cd dev-tools
+        docker compose down -v
+
   e2e-test:
     runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test, build]
+    needs: [backend-test, frontend-test, integration-test, build]
     
     services:
       postgres:
@@ -181,7 +239,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test]
+    needs: [backend-test, frontend-test, integration-test]
     
     steps:
     - uses: actions/checkout@v4
@@ -218,7 +276,7 @@ jobs:
 
   code-quality:
     runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test]
+    needs: [backend-test, frontend-test, integration-test]
     
     services:
       postgres:
