--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -168,74 +168,74 @@ jobs:
         cd dev-tools
         docker compose down -v
 
-  # e2e-test:
-  #   runs-on: ubuntu-latest
-  #   needs: [backend-test, frontend-test, integration-test, build]
+  e2e-test:
+    runs-on: ubuntu-latest
+    needs: [backend-test, frontend-test, integration-test, build]
     
-  #   services:
-  #     postgres:
-  #       image: postgres:15
-  #       env:
-  #         POSTGRES_PASSWORD: postgres
-  #         POSTGRES_DB: music_collab_test
-  #       options: >-
-  #         --health-cmd pg_isready
-  #         --health-interval 10s
-  #         --health-timeout 5s
-  #         --health-retries 5
-  #       ports:
-  #         - 5432:5432
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: music_collab_test
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
       
-  #     redis:
-  #       image: redis:7-alpine
-  #       options: >-
-  #         --health-cmd "redis-cli ping"
-  #         --health-interval 10s
-  #         --health-timeout 5s
-  #         --health-retries 5
-  #       ports:
-  #         - 6379:6379
+      redis:
+        image: redis:7-alpine
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
 
-  #   steps:
-  #   - uses: actions/checkout@v4
+    steps:
+    - uses: actions/checkout@v4
     
-  #   - name: Setup Node.js
-  #     uses: actions/setup-node@v4
-  #     with:
-  #       node-version: '20'
-  #       cache: 'npm'
-  #       cache-dependency-path: |
-  #         backend/package-lock.json
-  #         frontend/package-lock.json
-  #         e2e-tests/package-lock.json
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: |
+          backend/package-lock.json
+          frontend/package-lock.json
+          e2e-tests/package-lock.json
     
-  #   - name: Install dependencies
-  #     run: |
-  #       cd backend && npm ci
-  #       cd ../frontend && npm ci
-  #       cd ../e2e-tests && npm ci
+    - name: Install dependencies
+      run: |
+        cd backend && npm ci
+        cd ../frontend && npm ci
+        cd ../e2e-tests && npm ci
     
-  #   - name: Install Playwright Browsers
-  #     run: |
-  #       cd e2e-tests
-  #       npx playwright install --with-deps
+    - name: Install Playwright Browsers
+      run: |
+        cd e2e-tests
+        npx playwright install --with-deps
     
-  #   - name: Run E2E tests
-  #     run: |
-  #       cd e2e-tests
-  #       npm test
-  #     env:
-  #       NODE_ENV: test
-  #       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/music_collab_test
-  #       REDIS_URL: redis://localhost:6379
+    - name: Run E2E tests
+      run: |
+        cd e2e-tests
+        npm test
+      env:
+        NODE_ENV: test
+        DATABASE_URL: postgresql://postgres:postgres@localhost:5432/music_collab_test
+        REDIS_URL: redis://localhost:6379
     
-  #   - name: Upload E2E test results
-  #     uses: actions/upload-artifact@v4
-  #     if: always()
-  #     with:
-  #       name: playwright-report
-  #       path: e2e-tests/playwright-report/
-  #       retention-days: 30
+    - name: Upload E2E test results
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: playwright-report
+        path: e2e-tests/playwright-report/
+        retention-days: 30
 
   build:
     runs-on: ubuntu-latest
