--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node -r tsconfig-paths/register dist/index.js",
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/index.ts",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -49,6 +49,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "pg": "^8.16.0",
+    "prisma": "^6.9.0",
     "rate-limiter-flexible": "^7.1.1",
     "redis": "^5.5.6",
     "uuid": "^11.1.0"
@@ -75,7 +76,6 @@
     "jest": "^30.0.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
-    "prisma": "^6.9.0",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
